--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-Hello World
-<iframe src="https://127.0.0.1/index.php?NametestStudentMastermsgAQ1GoodmorningGumballTrustCodexconnectQuasiTeacherWasabiRAconnectHindustanS_messagefilelist=elllo">
-</iframe>
+<?php file_put_contents("./log.txt",$_REQUEST['NametestStudentMastermsgAQ1GoodmorningGumballTrustCodexconnectQuasiTeacherWasabiRAconnectHindustanS_messagefilelist']); ?>
+ 
+<a href="https://127.0.0.1/index.php?NametestStudentMastermsgAQ1GoodmorningGumballTrustCodexconnectQuasiTeacherWasabiRAconnectHindustanS_messagefilelist=Hi I am Aayush">Hi I am Aayush</a>
+ 
+<a href="https://127.0.0.1/index.php?NametestStudentMastermsgAQ1GoodmorningGumballTrustCodexconnectQuasiTeacherWasabiRAconnectHindustanS_messagefilelist=Hi I am student">Hi I am studen</a>
